[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/PlayerBlue_Frame_01_png_processed.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://art/Sounds/projectile_sound.mp3" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), null, ExtResource( 1 ), null, ExtResource( 1 ), null ],
"loop": true,
"name": "invulnerable",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
rotation = 1.5708
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( 0, -31, 29, 12, 13, 29, -11, 29, -28, 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="ProjectilePosition" type="Position2D" parent="."]
position = Vector2( -40, 0 )

[node name="InvulnerableTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_InvulnerableTimer_timeout"]
